--- a/index.html
+++ b/index.html
@@ -5,18 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge - DOM</title>
+    <style>
+      body {
+        background-color: #978DC8;
+      }
+      #app {
+        display: flex;
+        justify-content: center;
+      }
+      .container {
+        background-color: white;
+        border-radius: 10px;
+        padding: 10px 50px;
+        margin-top: 30px;
+        height: 400px;
+      }
+      #todo-title {
+        font-size: 12px;
+        text-align: center;
+      }
+      #todo-title h1 {
+        background-color: aqua;
+        display: inline-block;
+        padding: 0 10px;
+      }
+      #todo-subtitle {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <div id="app">
-      <!-- TODO: Buatlah sebuah header dengan id todo-title -->
-      <!-- TODO: Buatlah sebuah subtitle dengan id todo-subtitle -->
-
-      <!-- Section: input -->
-      <!-- TODO: Buatlah sebuah input bertipe text dengan id todo-input -->
-      <!-- TODO: Buatlah sebuah button dengan id todo-submit -->
-
-      <!-- Section output -->
-      <!-- TODO: Buatlah sebuah <ul> dengan id todo-output -->
+      <div class="container">
+        <!-- TODO: Buatlah sebuah header dengan id todo-title -->
+        <div id="todo-title">
+          <h1>To-Do List</h1>
+        </div>
+        <!-- TODO: Buatlah sebuah subtitle dengan id todo-subtitle -->
+        <div id="todo-subtitle">
+          <p>-Today I need to -</p>
+        </div>
+        <!-- Section: input -->
+        <section>
+          <!-- TODO: Buatlah sebuah input bertipe text dengan id todo-input -->
+          <input type="text" id="todo-input">
+          <!-- TODO: Buatlah sebuah button dengan id todo-submit -->
+          <button type="submit" id="todo-submit">Submit</button>
+        </section>
+        <!-- Section output -->
+        <!-- TODO: Buatlah sebuah <ul> dengan id todo-output -->
+        <section>
+          <ul id="todo-output"></ul>
+        </section>
+        </ul>
+      </div>
     </div>
 
     <!-- ! Untuk tantangan ini, script jangan diubah ke external js yah ! -->
@@ -25,17 +67,35 @@
       let button;
       let input;
       let output;
+      let result;
+      let keypress;
 
       // TODO: Buatlah sebuah fungsi dengan nama fnClickHandler
       // Fungsi yang digunakan untuk menambahkan tulisan
       // Jangan ubah cara deklarasi fungsinya, cukup isi saja
-      function fnClickHandler(toDoItem) {}
+      function fnClickHandler(toDoItem) {
+        output = document.createElement('li');
+        input  = document.getElementById('todo-input').value;
+        result = document.createTextNode(input);
+
+        output.appendChild(result);
+        document.getElementById('todo-output').append(output);
+        document.getElementById('todo-input').value = '';
+      }
 
       // TODO: register event onclick / addEventListener untuk button
       // akan menjalankan fungsi fnClickHandler
+      button = document.getElementById('todo-submit');
+      button.addEventListener('click', fnClickHandler);
       
       // TODO: register event onkeypress / addEventListener untuk input
       // sehingga saat di input ditekan enter akan menjalankan fungsi fnClickHandler juga
+      keypress = document.getElementById('todo-input');
+      keypress.addEventListener('keypress', (event) => {
+        if (event.key === 'Enter' || event.keyCode == 13) {
+          fnClickHandler();
+        }
+      });
     </script>
   </body>
 </html>
